# simple-browser-use

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: app.py  custom_browser.py
app/util/: helper.py
extensions/ulite/: manifest.json
extensions/ulite/_metadata/: verified_contents.json
extensions/ulite/_metadata/generated_indexed_rulesets/: _ruleset1  _ruleset2  _ruleset3  _ruleset4  _ruleset5  _ruleset6
src/: custom_browser.py
