[project]
name = "simple-browser-use"
version = "0.1.0"
description = "Simple MCP server for screenshot browser use"
authors = [{ name = "jckhoe", email = "" }]
requires-python = ">=3.13"

dependencies = [
    "requests>=2.31.0",
    "mcp==1.7.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "openai==1.77.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.3",
    "browser-use==0.1.48",
    "mcp-server==0.1.4",
    "langchain-openai==0.3.11",
    "playwright==1.52.0",
]
